test/files/neg/t630.check
t630.scala:20: error: incompatible type in overriding
val foo: Req2 (defined in trait Bar);
 found   : Test.foo.type
 required: Req2
        object foo extends Req1
               ^
1 error
